--- a/SPPConsole/SPPConsole.csproj
+++ b/SPPConsole/SPPConsole.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 </Project>
