--- a/SPPDogApiWrapper/SPPDogApiWrapper.csproj
+++ b/SPPDogApiWrapper/SPPDogApiWrapper.csproj
@@ -12,18 +12,18 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="MySqlConnector" Version="2.3.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="..\TestApi\TestApi.csproj"/>
+    <InternalsVisibleTo Include="..\TestApi\TestApi.csproj" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\Tests\TestApi.csproj" />
     </ItemGroup>
 
 <ItemGroup>
